--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,44 +1,15 @@
+body {
+	font-family: Verdana;
+	width: 90%;
+	margin-left: 5%;
+	font-size: 18px;
+	color: blue;
+}
 
-header{
-	text-decoration: underline black;
-	font-family: Quicksand, sans-serif;
-	text-align: center;
-	padding: 2vw;
-	border: 1px solid #FDFAFA;
+#resumen{
+	display: none;
 }
-body{
-	align-content: center;
-	font-family: Aleo;
 
-}
-.adaptativa-porcentaje-1{
-	width: 70%
-
-
-}
-.adaptativa-porcentaje-2{
-	
-	width: 50%
-}
-.adaptativa-porcentaje-3{
-	width: 20%
-}
-.adaptativa-porcentaje-4{
-	width: 100px;
-}
-footer{
-	text-align: center;
-	border-top: 2px solid brown;
-	padding-top:  1vw;
-	margin-top: 1vw;
-}
-#contenido{
-	margin: 1%;
-	text-align: center;
-}
-p{
-	font-family: 'PT Serif', serif;
-}
 @media (min-width: 600px) {
 
 	body {
@@ -49,9 +20,38 @@ p{
 	#resumen{
 		display: block;
 	}
-	media (min-width: 900px) {
+}
+
+@media (min-width: 900px) {
 	body {
 		font-size: 14px;
 		color: black;
 	}
+}
+
+header {
+	padding: 1vh 1vw;
+	margin-bottom: 1vh;
+}
+
+#contenido{
+	margin: 1%;
+	text-align: center;
+}
+
+header h1 {
+	padding-left: 1%;
+	font-size: 1.5em;
+}
+
+footer {
+	font-size: 0.8em;
+	border-top: solid 2px #1f47a8;
+	padding-top: 1vw;
+	margin-top: 1vw;
+	text-align: center;
+}
+
+img {
+	width: 50%;
 }
