--- a/css/estilos.css
+++ b/css/estilos.css
@@ -18,10 +18,10 @@ body{
 }
 .adaptativa-porcentaje-2{
 	
-	width: 50%
+	width: 70%
 }
 .adaptativa-porcentaje-3{
-	width: 20%
+	width: 70%
 }
 .adaptativa-porcentaje-4{
 	width: 100px;
@@ -54,4 +54,12 @@ p{
 		font-size: 14px;
 		color: black;
 	}
+}
+body img:hover{
+	width: 100%;
+	border: solid 4px black;
+}
+body img{
+	transition: width border 0.5s;
+
 }
