--- a/css/estilos.css
+++ b/css/estilos.css
@@ -11,20 +11,37 @@ body{
 	font-family: Aleo;
 
 }
-.adaptativa-porcentaje-1{
-	width: 70%
-
+.adaptativa-porcentaje-1 img{
+	width: 70%;
+	transition: width border 0.5s;
 
 }
-.adaptativa-porcentaje-2{
+.adaptativa-porcentaje-2 img {
 	
-	width: 70%
+	width: 70%;
+	transition: width border 0.5s;
 }
-.adaptativa-porcentaje-3{
-	width: 70%
+.adaptativa-porcentaje-3 img{
+	width: 70%;
+	transition: width border 0.5s;
 }
-.adaptativa-porcentaje-4{
+.adaptativa-porcentaje-4 img{
 	width: 100px;
+}
+.adaptativa-porcentaje-1 img:hover{
+	width: 100%;
+	border: solid 4px black;
+
+}
+.adaptativa-porcentaje-2 img:hover {
+	
+	width: 100%;
+	border: solid 4px black;
+}
+.adaptativa-porcentaje-3 img:hover{
+	width: 100%;
+	border: solid 4px black;
+
 }
 footer{
 	text-align: center;
@@ -54,12 +71,4 @@ p{
 		font-size: 14px;
 		color: black;
 	}
-}
-body img:hover{
-	width: 100%;
-	border: solid 4px black;
-}
-body img{
-	transition: width border 0.5s;
-
 }
