--- a/css/estilos.css
+++ b/css/estilos.css
@@ -66,7 +66,7 @@ p{
 	#resumen{
 		display: block;
 	}
-	media (min-width: 900px) {
+@media (min-width: 900px) {
 	body {
 		font-size: 14px;
 		color: black;
