--- a/css/estilos.css
+++ b/css/estilos.css
@@ -11,34 +11,34 @@ body{
 	font-family: Aleo;
 
 }
-.adaptativa-porcentaje-1 img{
+.adaptativa-porcentaje-1 {
 	width: 70%;
 	transition: width border 0.5s;
 
 }
-.adaptativa-porcentaje-2 img {
+.adaptativa-porcentaje-2  {
 	
 	width: 70%;
 	transition: width border 0.5s;
 }
-.adaptativa-porcentaje-3 img{
+.adaptativa-porcentaje-3 {
 	width: 70%;
 	transition: width border 0.5s;
 }
-.adaptativa-porcentaje-4 img{
+.adaptativa-porcentaje-4 {
 	width: 100px;
 }
-.adaptativa-porcentaje-1 img:hover{
+.adaptativa-porcentaje-1:hover{
 	width: 100%;
 	border: solid 4px black;
 
 }
-.adaptativa-porcentaje-2 img:hover {
+.adaptativa-porcentaje-2:hover {
 	
 	width: 100%;
 	border: solid 4px black;
 }
-.adaptativa-porcentaje-3 img:hover{
+.adaptativa-porcentaje-3:hover{
 	width: 100%;
 	border: solid 4px black;
 
